# ptb-django-cookiecutter

./: .all-contributorsrc  README.md  cookiecutter.json  requirements_dev.txt  setup.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
docs/: README.md  conf.py  index.rst  make.bat
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  manage.py
{{cookiecutter.project_slug}}/config/: asgi.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  dev.py  prod.py
{{cookiecutter.project_slug}}/requirements/: base.txt  dev.txt  prod.txt
{{cookiecutter.project_slug}}/src/: pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/src/bot/: asgi.py  prod.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/src/bot/core/: admin.py  apps.py  authentication.py  conversation.py  engine.py  models.py  tests.py  views.py
{{cookiecutter.project_slug}}/src/bot/core/management/commands/: runbot.py
{{cookiecutter.project_slug}}/src/bot/settings/: base.py  dev.py  prod.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/accounts/: admin.py  apps.py  models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/bot/: apps.py  callbacks.py  commands.py  constants.py  engine.py  messages.py  models.py  renderers.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/bot/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: apps.py  middleware.py  models.py
(+1 files in other folders)
